--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          LOCALE: zh
           SHOW_LINES_OF_CODE: "True"  # 显示截至日期写入的代码行数
           SHOW_OS: "True" # 显示系统
           SHOW_PROJECTS: "True" # 显示项目
