--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/baiwumm/baiwumm#readme",
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "dotenv": "^17.2.3",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "wakatime-client": "^2.7.0"
   }
 }
