feat: 更改 waka 定时任务分支

--- a/.github/workflows/update-waka.yml
+++ b/.github/workflows/update-waka.yml
@@ -1,7 +1,7 @@
 name: Update gist with WakaTime stats
 on:
   push:
-    branches: master
+    branches: main
     
   schedule:
     - cron: "0 */3 * * *"
